--- a/code/style.css
+++ b/code/style.css
@@ -1,9 +1,9 @@
 
 body{
-  color: black;
+  color:white;
   margin:0px;
   font-family: 'Baloo Tamma 2', cursive;
-  background-color:white;
+  background-image: url('../assets/texture_08_by_oleo_kun_d1a4a8l.jpg');
 }
 html { font-size: 13px; 
 }
@@ -14,12 +14,12 @@ header{
 	height: 70px;
 	display: flex;
 	align-items: center;
-	
 }
 header h1{
 	font-size: 40px;
 	margin:0px 30px 0px 10px;
 	padding:0px;
+	color:black;
 }
 header a{
 	text-decoration: none;
@@ -46,10 +46,10 @@ a:hover {
 	display:flex;
 	flex-direction: column;
 	justify-content: center;
-	padding-bottom: 20 px;
+	padding-top: 30px;
  }
  .news{
-	padding: 1rem;
+	padding:3rem;
   	width:480px;
   	height:90%;
 
@@ -60,7 +60,7 @@ a:hover {
 } 
 /*** News cards section **/
 .card {
-  padding: 1rem;
+  padding: 3rem;
   width:300px;
   height:90%; 
 }
@@ -104,6 +104,8 @@ a:hover {
 	 .icon{
 		display:none;
 	  }
+	  html { font-size: 16px; 
+	  }
 }
 @media (min-width: 900px) {
 	.news_cards { 
@@ -127,8 +129,8 @@ a:hover {
 		margin: 0 auto;
 		display:flex;
 		flex-direction: row;
-		justify-content: center;
-		padding-bottom: 60px;
+		justify-content: flex-start;
+		padding: 60px;
 	 }
 	 .navbar_tablet{
 		display:none; 
@@ -138,6 +140,8 @@ a:hover {
 		width:650px;
 		height:90%;	
 	  }	
+	  html { font-size: 20px; 
+	  }
 }
 /* shake images*/
 @keyframes shake {
@@ -158,19 +162,43 @@ a:hover {
 	animation: shake 0.5s;
 	animation-iteration-count: infinite;
   }
+/** polariod photos **/
+.card {
+	position: relative;
+	width: 220px;
+	padding:10px;
+  }
+   
+  .card img {
+	border: 10px solid #fff;
+	border-bottom: 45px solid #fff;
+	-webkit-box-shadow: 3px 3px 3px #777;
+	   -moz-box-shadow: 3px 3px 3px #777;
+			box-shadow: 3px 3px 3px #777;
+  }
+   
+  .card p {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	bottom: 0px;
+	color: white;
+  }
+  
+
 
 /* Footer */
 footer{
-	padding-top: 60px;
+	padding-top: 100px;
   	margin: 20px;
   	display:flex;
   	justify-content: center;
   	align-items: center;
-  	background-color:white;
+  
 
 }
 footer img{
-	padding: 10px;
+	padding: 20px;
 	height: 45px;
 	width: 45px;
 }
